<resources>
    <string name="app_name">AndroidApp</string>
    <string name="endScreenWinner">Winner</string>
    <string name="endScreenEliminated">Knocked out</string>
    <string name="endScreenBackButton">Back to lobby</string>
    <string name="question_screen_round">Round 1</string>
    <string name="question_screen_remaining">Remaining: 2/2</string>
    <string name="question_screen_question">Which fruit is yellow?</string>
    <string name="question_screen_alt_1">Orange</string>
    <string name="question_screen_alt_2">Banana</string>
    <string name="question_screen_alt_3">Pear</string>
    <string name="question_screen_alt_4">Grape</string>
    <string name="midgame_layout_heading1">Alive</string>
    <string name="midgame_layout_heading2">Eliminated this round</string>
    <string name="midgame_layout_heading3">Eliminated</string>
    <string name="midgame_layout_waiting_text">Next round starts soon</string>
    <string name="login_screen_usename_hint">Username</string>
    <string name="login_screen_password_hint">Password</string>
    <string name="login_screen_Login_button">Login</string>
    <string name="login_screen_register_button">Register</string>

</resources>
