<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/middle_blue"
    tools:context=".QuestionScreenActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:text="@string/question_screen_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/white"
        android:text="@string/question_screen_remaining"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/alternativeThree"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners_10_dp"
        android:text="@string/question_screen_alt_3"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alternativeOne" />

    <Button
        android:id="@+id/alternativeFour"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:background="@drawable/rounded_corners_10_dp"
        android:text="@string/question_screen_alt_4"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alternativeTwo" />

    <Button
        android:id="@+id/alternativeOne"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:background="@drawable/rounded_corners_10_dp"
        android:text="@string/question_screen_alt_1"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="350dp" />

    <Button
        android:id="@+id/alternativeTwo"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:background="@drawable/rounded_corners_10_dp"
        android:text="@string/question_screen_alt_2"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="350dp" />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="295dp"
        android:layout_height="190dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_corners_10_dp"
        android:gravity="center"
        android:text="@string/question_screen_question"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/questionprogressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="273dp"
        android:layout_height="21dp"
        android:progress="50"
        android:progressBackgroundTint="@color/red"
        android:progressTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionText"
        app:layout_constraintVertical_bias="0.076" />

</androidx.constraintlayout.widget.ConstraintLayout>