<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/middle_blue"
    >

    <ImageView
        android:id="@+id/loginQuizRoyaleLogo"
        android:layout_width="305dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@drawable/quizroyalelogo1" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Enter Username"
        android:inputType="textPersonName"
        android:background="@drawable/square_corners"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginQuizRoyaleLogo"
        app:layout_constraintVertical_bias="0.118" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:background="@drawable/square_corners"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginUsername"
        app:layout_constraintVertical_bias="0.155" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:text="@string/login_screen_Login_button"
        android:textColor="@color/black"
        app:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword"
        app:layout_constraintVertical_bias="0.374" />

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:text="@string/login_screen_register_button"
        android:textColor="@color/black"
        app:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton"
        app:layout_constraintVertical_bias="0.202" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_screen_usename_hint"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/loginUsername"
        app:layout_constraintStart_toStartOf="@+id/loginUsername" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_screen_password_hint"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/loginPassword"
        app:layout_constraintStart_toStartOf="@+id/loginPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>