<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/midgameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/middle_blue"
    tools:context=".MidGame">

    <ImageView
        android:id="@+id/midgameLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logosmall" />

    <TextView
        android:id="@+id/midgameHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Round"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/midgameLogo"
        app:layout_constraintVertical_bias="0.054"
        tools:text="Round x" />

    <ProgressBar
        android:id="@+id/midgameprogressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="273dp"
        android:layout_height="21dp"
        android:progress="50"
        android:progressBackgroundTint ="@color/red"
        android:progressTint="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/midgameHeading"
        app:layout_constraintVertical_bias="0.505" />

    <TextView
        android:id="@+id/midgameAlive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/midgame_layout_heading1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/midgameHeading"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/midgameAlive2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/midgame_layout_waiting_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/midgameHeading"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/midgameAlivePlcaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/midgameAlive"
        app:layout_constraintTop_toBottomOf="@+id/midgameAlive"
        app:layout_constraintVertical_bias="0.036"
        tools:text="Alive Users" />

    <View
        android:id="@+id/view2"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/midgameAlive"
        app:layout_constraintTop_toBottomOf="@+id/midgameAlive"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/midgameEliminatedRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/midgame_layout_heading2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/midgameAlive"
        app:layout_constraintVertical_bias="0.205" />


    <TextView
        android:id="@+id/midgameEliminatedPlcaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/midgameEliminatedRound"
        app:layout_constraintTop_toBottomOf="@+id/midgameEliminatedRound"
        app:layout_constraintVertical_bias="0.053"
        tools:text="Eliminated Users" />

    <View
        android:id="@+id/view3"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/midgameEliminatedRound"
        app:layout_constraintTop_toBottomOf="@+id/midgameEliminatedRound"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/midgameEliminated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/midgame_layout_heading3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/midgameEliminatedRound"
        app:layout_constraintVertical_bias="0.264" />

    <View
        android:id="@+id/view4"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/midgameEliminated"
        app:layout_constraintTop_toBottomOf="@+id/midgameEliminated"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>